--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
-flair==0.11.3
-gensim==4.2.0
+plotly
+gensim
+pandas
+scipy
+jupyterlab
+matplotlib
+matplotlib-inline
+scikit-learn
+thefuzz
+cufflinks
