--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,11 @@
 venv/
 .git/
 .ipynb_checkpoints/
-*.csv
-*.json
 __pycache__/
 *.zip
+data-files/*
+!data-files/cluster-plots/
+!data-files/clustering-data/
+!data-files/ngram_replacements.json
+!data-files/replace_stopwords_orgs.txt
+*.model
