fixes issues raised by Malte in the last PR

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@ data-files/*
 !data-files/clustering-data/
 !data-files/ngram_replacements.json
 !data-files/replace_stopwords_orgs.txt
+!data-files/oecd-stm-themes.json.json
 *.model
