--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-plotly
-gensim
-pandas
-scipy
-jupyterlab
-matplotlib
-matplotlib-inline
-scikit-learn
-thefuzz
-cufflinks
-text-preprocessing
-nltk
-flair
-text_preprocessing
+plotly==5.6.0
+gensim==4.2.0
+pandas==1.4.2
+jupyterlab==3.4.2
+matplotlib==3.5.2
+scikit-learn==1.1.0
+thefuzz==0.19.0
+text-preprocessing==0.1.1
+nltk==3.7
+flair==0.11.3
+scipy==1.8.1
+seaborn==0.11.2
+allennlp==2.4.0
+allennlp-models==2.4.0
